--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,24 @@
-spring.application.name=v1
+spring.application.name=project01
+
 spring.datasource.url=jdbc:h2:mem:farmacia
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# application.properties
+springdoc.swagger-ui.path=/docs
+springdoc.api-docs.path=/api-docs
+
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
+
+spring.jpa.show-sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql=TRACE
+
+# JWT
+app.jwt.secret=change_me_with_a_very_long_random_256bit_secret___________________________
+app.jwt.expiration-ms=3600000
+
+logging.level.org.springframework.security=DEBUG
