--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,14 +4,20 @@ spring.datasource.url=jdbc:h2:mem:farmacia
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-spring.jpa.hibernate.ddl-auto=update
 # application.properties
 springdoc.swagger-ui.path=/docs
 springdoc.api-docs.path=/api-docs
 
+# Dialecto y comportamiento de Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create
 
+# Permitir que se ejecute el import.sql después de crear tablas
+spring.jpa.defer-datasource-initialization=true
+
+# Activar ejecución del import.sql
+spring.sql.init.mode=always
 
 spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=DEBUG
