--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,30 +1,42 @@
 spring.application.name=project01
 
-spring.datasource.url=jdbc:h2:mem:farmacia
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
+# ==========================
+# ? Base de datos (local)
+# ==========================
+spring.datasource.url=${DB_URL:jdbc:h2:mem:farmacia}
+spring.datasource.driverClassName=${DB_DRIVER:org.h2.Driver}
+spring.datasource.username=${DB_USERNAME:sa}
+spring.datasource.password=${DB_PASSWORD:password}
 
-# application.properties
+# ==========================
+# ? Puerto de servidor
+# ==========================
+server.port=${PORT:8080}
+
+# ==========================
+# ? Swagger
+# ==========================
 springdoc.swagger-ui.path=/docs
 springdoc.api-docs.path=/api-docs
 
-# Dialecto y comportamiento de Hibernate
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create
-
-# Permitir que se ejecute el import.sql después de crear tablas
+# ==========================
+# ? JPA / Hibernate
+# ==========================
+spring.jpa.database-platform=${DB_DIALECT:org.hibernate.dialect.H2Dialect}
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.defer-datasource-initialization=true
-
-# Activar ejecución del import.sql
 spring.sql.init.mode=always
-
 spring.jpa.show-sql=true
+
+# ==========================
+# ? Logs
+# ==========================
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql=TRACE
-
-# JWT
-app.jwt.secret=change_me_with_a_very_long_random_256bit_secret___________________________
-app.jwt.expiration-ms=3600000
-
 logging.level.org.springframework.security=DEBUG
+
+# ==========================
+# ? JWT
+# ==========================
+app.jwt.secret=${APP_JWT_SECRET:change_me_with_a_very_long_random_256bit_secret___________________________}
+app.jwt.expiration-ms=${APP_JWT_EXPIRATION:3600000}
